--- a/index.html
+++ b/index.html
@@ -10,22 +10,43 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,300&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body onscroll="headerAnimation()">
     <header>
-      <nav>
+      <div class="scroll-container">
+        <p class="scroll-container-title">LE RESTAURANT</p>
+      </div>
+      <nav id="navigation">
         <ul class="nav-items">
-          <li><a href="#sobre">SOBRE </a></li>
-          <li><a href="#menu">MENU </a></li>
-          <li><a href="#avaliacoes"> AVALIAÇÕES</a></li>
-          <li><a href="#contato"> CONTATO</a></li>
+          <li><a class="nav-links" href="#sobre">SOBRE </a></li>
+          <li><a class="nav-links" href="#menu">MENU </a></li>
+          <li><a class="nav-links" href="#avaliacoes"> AVALIAÇÕES</a></li>
+          <li><a class="nav-links" href="#contato"> CONTATO</a></li>
         </ul>
-        <button type="button">RESERVAR</button>
+        <div style="display: flex; align-items: center; gap: 0.5rem">
+          <!-- <a href="">
+            <box-icon
+              id="wp-icon"
+              type="logo"
+              name="whatsapp"
+              size="lg"
+              color="rgba(255, 255, 255, 0)"
+            ></box-icon>
+          </a> -->
+          <button type="button">RESERVAR</button>
+        </div>
       </nav>
     </header>
+    <!-- COVER -->
     <main>
       <div class="cover-subcontainer">
         <span>LE</span>
@@ -38,5 +59,42 @@
         <button type="button">MENU</button>
       </div>
     </main>
+
+    <section class="sobre" style="margin: 4rem 2rem">
+      <div class="row align-items-center justify-content-around">
+        <img
+          class="col-5 rounded-circle"
+          src="/assets/segundaImagem.jpg"
+          alt=""
+        />
+
+        <div class="col-6">
+          <h2>Quem somos?</h2>
+          <p class="sobre-subtitle">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia
+            sint aut exercitationem corrupti consequatur cupiditate eveniet
+            totam repellendus, autem doloribus nesciunt inventore explicabo cum
+            molestiae quisquam facilis quia ipsa.
+          </p>
+          <p class="sobre-content">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia
+            sint aut exercitationem corrupti consequatur cupiditate eveniet
+            totam repellendus, autem doloribus nesciunt inventore explicabo cum
+            molestiae quisquam facilis quia ipsa. Iure. Veritatis quisquam
+            sapiente placeat enim corporis doloremque, a nulla molestiae numquam
+            accusamus perspiciatis dolorum ratione aspernatur eos, nam quae
+            possimus eveniet tempora vero ipsam inventore? Molestias adipisci
+            voluptate ab totam.
+          </p>
+        </div>
+      </div>
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/script.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   </body>
 </html>
