--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <section id="sobre" class="sobre" style="padding: 4rem 2rem">
       <div
-        class="row align-items-center justify-content-around position-relative"
+        class="row align-items-center justify-content-around my-5 position-relative"
       >
         <img
           id="image"
@@ -341,25 +341,95 @@
 
       <div class="d-flex flex-row justify-content-around w-100">
         <button class="botoes-menus" type="button">
-          <box-icon class="icones-botoes-menu" size="sm" name="star"></box-icon>
-          <p>Pães</p>
+          <box-icon size="sm" type="solid" name="star-half"></box-icon>
+          <p class="botao-label" data-label="paes">Pães</p>
         </button>
         <button class="botoes-menus" type="button">
-          <box-icon class="icones-botoes-menu" size="sm" name="star"></box-icon>
-          <p>Saladas</p>
+          <box-icon size="sm" type="solid" name="star-half"></box-icon>
+          <p class="botao-label" data-label="saladas">Saladas</p>
         </button>
         <button class="botoes-menus" type="button">
-          <box-icon class="icones-botoes-menu" size="sm" name="star"></box-icon>
-          <p>Peixe</p>
+          <box-icon size="sm" type="solid" name="star-half"></box-icon>
+          <p class="botao-label" data-label="peixes">Peixe</p>
         </button>
         <button class="botoes-menus" type="button">
-          <box-icon class="icones-botoes-menu" size="sm" name="star"></box-icon>
-          <p>Carnes</p>
+          <box-icon size="sm" type="solid" name="star-half"></box-icon>
+          <p class="botao-label" data-label="carnes">Carnes</p>
         </button>
         <button class="botoes-menus" type="button">
-          <box-icon class="icones-botoes-menu" size="sm" name="star"></box-icon>
-          <p>Sobremesas</p>
+          <box-icon size="sm" type="solid" name="star-half"></box-icon>
+          <p class="botao-label" data-label="sobremesas">Sobremesas</p>
         </button>
+      </div>
+
+      <div id="lista-menu" class="container-fluid mt-4">
+        <div class="menu-transicao">
+          <div class="row align-items-center justify-content-around my-5">
+            <div class="col-4">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-7" style="border: 1px solid black"></div>
+            <p class="col-1 preco">8.5</p>
+          </div>
+
+          <div class="row align-items-center justify-content-around my-5">
+            <div class="col-4">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-7" style="border: 1px solid black"></div>
+            <p class="col-1 preco">8.5</p>
+          </div>
+
+          <div class="row align-items-center justify-content-around my-5">
+            <div class="col-4">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-7" style="border: 1px solid black"></div>
+            <p class="col-1 preco">8.5</p>
+          </div>
+
+          <div class="row align-items-center justify-content-around my-5">
+            <div class="col-4">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-7" style="border: 1px solid black"></div>
+            <p class="col-1 preco">8.5</p>
+          </div>
+
+          <div class="row align-items-center justify-content-around my-5">
+            <div class="col-4">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-7" style="border: 1px solid black"></div>
+            <p class="col-1 preco">8.5</p>
+          </div>
+
+          <div class="row align-items-center justify-content-around my-5">
+            <div class="col-4">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-7" style="border: 1px solid black"></div>
+            <p class="col-1 preco">8.5</p>
+          </div>
+        </div>
       </div>
     </section>
     <script
