--- a/carnes.html
+++ b/carnes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Restaurante</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.scss" />
     <!--   <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,73 +25,73 @@
     />
   </head>
 
-  <body>
-    <div class="menu-transicao">
-      <div class="row align-items-center justify-content-around my-5">
-        <div class="col-4">
-          <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
-          <p class="descricao-prato">
-            Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
-          </p>
-        </div>
-        <div class="col-7" style="border: 1px solid black"></div>
-        <p class="col-1 preco">8.5</p>
-      </div>
+  <body class="menu-transicao">
+    <div >
+       <div class="row row-cols-3 align-items-center justify-content-around my-5">
+            <div class=" col-sm-4 col-md-4">
+              <h4 class="d-block nome-prato ">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-7" style="border: 1px solid black"></div>
+            <p class="col-sm-1 col-md-1 preco">8.5</p>
+          </div>
 
-      <div class="row align-items-center justify-content-around my-5">
-        <div class="col-4">
-          <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
-          <p class="descricao-prato">
-            Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
-          </p>
-        </div>
-        <div class="col-7" style="border: 1px solid black"></div>
-        <p class="col-1 preco">8.5</p>
-      </div>
+       <div class="row row-cols-3 align-items-center justify-content-around my-5">
+            <div class=" col-sm-4 col-md-4    ">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-7" style="border: 1px solid black"></div>
+            <p class="col-sm-1 col-md-1 preco">8.5</p>
+          </div>
 
-      <div class="row align-items-center justify-content-around my-5">
-        <div class="col-4">
-          <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
-          <p class="descricao-prato">
-            Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
-          </p>
-        </div>
-        <div class="col-7" style="border: 1px solid black"></div>
-        <p class="col-1 preco">8.5</p>
-      </div>
+       <div class="row row-cols-3 align-items-center justify-content-around my-5">
+            <div class=" col-sm-4 col-md-4    ">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-7" style="border: 1px solid black"></div>
+            <p class="col-sm-1 col-md-1 preco">8.5</p>
+          </div>
 
-      <div class="row align-items-center justify-content-around my-5">
-        <div class="col-4">
-          <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
-          <p class="descricao-prato">
-            Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
-          </p>
-        </div>
-        <div class="col-7" style="border: 1px solid black"></div>
-        <p class="col-1 preco">8.5</p>
-      </div>
+       <div class="row row-cols-3 align-items-center justify-content-around my-5">
+            <div class=" col-sm-4 col-md-4    ">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-7" style="border: 1px solid black"></div>
+            <p class="col-sm-1 col-md-1 preco">8.5</p>
+          </div>
 
-      <div class="row align-items-center justify-content-around my-5">
-        <div class="col-4">
-          <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
-          <p class="descricao-prato">
-            Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
-          </p>
-        </div>
-        <div class="col-7" style="border: 1px solid black"></div>
-        <p class="col-1 preco">8.5</p>
-      </div>
+       <div class="row row-cols-3 align-items-center justify-content-around my-5">
+            <div class=" col-sm-4 col-md-4    ">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-7" style="border: 1px solid black"></div>
+            <p class="col-sm-1 col-md-1 preco">8.5</p>
+          </div>
 
-      <div class="row align-items-center justify-content-around my-5">
-        <div class="col-4">
-          <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
-          <p class="descricao-prato">
-            Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
-          </p>
-        </div>
-        <div class="col-7" style="border: 1px solid black"></div>
-        <p class="col-1 preco">8.5</p>
-      </div>
+       <div class="row row-cols-3 align-items-center justify-content-around my-5">
+            <div class=" col-sm-4 col-md-4    ">
+              <h4 class="d-block nome-prato">Lorem Ipsum Lorem Ipsum</h4>
+              <p class="descricao-prato">
+                Lorem iasiofjaksjfhaksjhkabbmnas safkasbf asbf
+              </p>
+            </div>
+            <div class="col-sm-6 col-md-7" style="border: 1px solid black"></div>
+            <p class="col-sm-1 col-md-1 preco">8.5</p>
+          </div>
     </div>
   </body>
 </html>
